unify in svn and git

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,11 +11,12 @@
     <button id="trigger">CHANGE HASH</button>
     <br/>
     <div class="dynamic"></div>
+    <script>module = {};</script>
     <script src="./js/jquery-1.8.3.min.js"></script>
     <script src="./js/md5.js"></script>
     <script src="../src/history.js"></script>
     <script>
-        !function(){     
+        !function(){
             /* emulate outer usage */
             /* test data */
             var HASHLIST = [1,2,3,4];
